[package]
name = "test-runtime"
version = "0.17.0"
edition = "2021"

[dependencies]
subxt = { path = "../subxt" }
sp-runtime = { git = "https://github.com/librelois/substrate/", branch = "duniter-monthly-2022-02" }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../subxt" }
sp-core = { git = "https://github.com/librelois/substrate/", branch = "duniter-monthly-2022-02" }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
which = "4.2.2"
